--- a/LinkedLists/.project
+++ b/LinkedLists/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>LinkedLists</name>
+	<name>SingleLinkedLists</name>
 	<comment></comment>
 	<projects>
 	</projects>
